# user_transaction_admin

./: .gitignore  Dockerfile  Makefile  README.md  default.env  docker-compose.yml  dump.sql  pyproject.toml
src/admin/: routes.py
src/admin/admin_models/: __init__.py  models.py
src/admin/templates/: statistic.html
src/app/: __main__.py  database.py  server.py
src/app/core/: config.py  db_config.py
src/containers/: health_di.py  transactions_di.py  users_di.py
src/exceptions/: base.py
src/migrations/: env.py
src/migrations/versions/: cef7db39ec86_add_created_at_field_to_transaction.py  f1e4f2b3eb7b_add_user_and_transaction_tables.py
src/models/: __init__.py  transaction.py  user.py
src/repositories/: base.py  health_repository.py  transaction_repository.py  user_repository.py
src/routes/: __init__.py  depends.py  health_routes.py  transaction_routes.py  user_routes.py
src/schemas/: base.py  transaction_schemas.py  user_schemas.py
src/services/: base.py  health_service.py  transaction_service.py  user_service.py
